k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: linker-app
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
