k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linker-backend-service
  namespace: linker-app
spec:
  type: ClusterIP 
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
