k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linker-ingress
  namespace: linker-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true" # Enable regex for path matching
spec:
  rules:
  - http:
      paths:
      - path: /api/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: linker-backend-service
            port:
              number: 80

      - path: /api/check
        pathType: Exact
        backend:
          service:
            name: linker-app-service
            port:
              number: 80

      # Frontend catch-all route
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linker-app-service
            port:
              number: 80
